frontend/scss/globals/_g-modal.scss
.g-modal {
  display: none;
  position: fixed;
  z-index: map-get($zindexs, 'modal');
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  max-width: 100vw;
  max-height: 100vh;
  background-color: $color__white;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  opacity: 0;
  transition: opacity .35s;

  @include breakpoint('small+') {
    left: 50%;
    right: auto;
    top: 50%;
    bottom: auto;
    transform: translate(-50%, -50%);
  }
}

.g-modal__close {
  position: absolute;
  right: 12px;
  top: 12px;
  padding: 0;
  border: 0 none;
  background: transparent;
  color: $color__text--forms;
  cursor: pointer;
}

.g-modal__close:hover {
  color: $color__text;
}


.g-modal--media {
  padding-top: 60px;

  .g-modal__close {
    right: 22px;
    top: 22px;
  }

  @include breakpoint('small+') {
    padding-top: 40px;
    background-color: $color__black;

    .g-modal__close {
      right: 12px;
      top: 12px;
      color: $color__white;
    }

    .g-modal__close:hover {
      color: $color__black--5;
    }
  }

  .g-modal__content {
    display: block;
    position: relative;
    width: 90vw;
    max-width: 160vh; // stops a 16:9 thing growing taller than 90% of total vh
    height: 0;
    margin: 0 auto;
    padding-bottom: percentage(9 / 16); // 16:9
  }

  iframe {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
  }
}

.g-modal--media.g-modal--media-soundcloud {

  @include breakpoint('small+') {
    background-color: $color__black--5;

    .g-modal__close {
      color: $color__text--forms;
    }

    .g-modal__close:hover {
      color: $color__text;
    }
  }

  .g-modal__content {
    padding-bottom: 166px;

    @include breakpoint('large+') {
      width: colspan(28,'large');
    }

    @include breakpoint('xlarge') {
      width: colspan(28,'xlarge');
    }
  }
}


.g-modal--promo {

  .g-modal__content {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
  }

  .g-modal__image {
    display: none;
    position: relative;
    overflow: hidden;

    @include breakpoint('medium+') {
      display: block
    }

    @include breakpoint('medium') {
      width: colspan(25, 'medium');
    }

    @include breakpoint('large') {
      width: colspan(20, 'large');
    }

    @include breakpoint('xlarge') {
      width: colspan(20, 'xlarge');
    }
  }

  .g-modal__image img {
    @include objectFitFix;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .g-modal__main {
    position: relative;
    padding: 16px 40px 40px;
    background-color: $color__bg;

    @include breakpoint('xsmall') {
      padding-right: map-get($outer-gutters, 'xsmall');
      padding-top: 52px;
      padding-left: map-get($outer-gutters, 'xsmall');
    }

    @include breakpoint('small') {
      width: colspan(43, 'small');
    }

    @include breakpoint('medium') {
      width: colspan(33, 'medium');
    }

    @include breakpoint('large') {
      width: colspan(28, 'large');
    }

    @include breakpoint('xlarge') {
      width: colspan(28, 'xlarge');
    }
  }

  .g-modal__close {
    right: 22px;
    top: 22px;
  }

  .g-modal__title {
  }

  .g-modal__intro {
    margin-top: 24px;
    color: $color__text--secondary;
  }

  .g-modal__form {
    margin-top: 44px;
  }

  .g-modal__form-row {
    margin-top: 16px;
  }

  .g-modal__form-row:first-child {
    margin-top: 0;
  }

  .g-modal__form-row p {
  }

  .g-modal__form-row--split {
    @include breakpoint('small+') {
      display: flex;
      flex-flow: row nowrap;
      justify-content: space-between;
    }
  }

  .g-modal__form-row--split p {
    width: 100%;
    margin-top: 16px;

    @include breakpoint('small+') {
      margin-left: 20px;
      margin-top: 0;
    }
  }

  .g-modal__form-row--split p:first-child {
    margin-top: 0;
    margin-left: 0;
  }

  .g-modal__form-row--submit {
    margin-top: 24px;
  }

  .g-modal__form-row--submit button {
    width: 100%;
  }

  .g-modal__form-note {
    margin-top: 32px;
    color: $color__text--secondary;
  }

  // TODO: Make link styles more consistent! Here, we mirror .btn color conventions.
  a {
      color: $color__link--accent;

      &:hover,
      &:focus:hover {
        color: $color__link--accent-hover;
      }

      &:active:hover {
        color: $color__link--accent-active;
      }
  }
}

